workspace = {  members = ["src/orm_macro_derive"] }
[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.10.3"
anyhow = "1.0.80"
rusqlite = { version = "0.31.0", features = ["bundled"] }
orm_macro_derive = {path = "src/orm_macro_derive" }
syn ={ version = "2.0.52", features = ["full"] }
quote = "1.0.7"

[profile.release]
panic = 'abort'

[lib]
path = "src/main.rs"
proc-macro = true