workspace = {  members = ["src/orm_macro_derive"] }
[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
anyhow = "1.0.80"
rand = "0.8.5"
[profile.release]
panic = 'abort'

[lib]
path = "src/main.rs"
proc-macro = true
