[package]
name = "orm_macro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.52"
rusqlite = { version = "0.31.0", features = ["bundled"] }
proc-macro2 = "1.0.78"
anyhow = "1.0.80"

[lib]
proc-macro = true